--- a/css/home.css
+++ b/css/home.css
@@ -7,21 +7,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 98vh;
+  height: 100vh;
   position: relative;
-  margin: 5px;
-  border-radius: calc(100vw * 15 / 1900);
+  
 }
 .hero::after {
   content: "";
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   bottom: 0;
-  width: 90%;
-  background-image: linear-gradient(to left, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+  width: 80%;
+  background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(0, 0, 0, 0));
   z-index: 1;
-  border-radius: calc(100vw * 15 / 1900);
 }
 
 @keyframes fade {
@@ -46,7 +44,7 @@
   top: 0;
   left: 0;
   animation: fade 9s ease-in-out infinite alternate;
-  border-radius: calc(100vw * 15 / 1900);
+
 }
 .carousel img:nth-of-type(1) {
   animation-delay: 0s;
@@ -57,16 +55,7 @@
 .carousel img:nth-of-type(3) {
   animation-delay: 6s;
 }
-.overlay {
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  border-radius: calc(100vw * 15 / 1900);
-}
+
 .hero-content {
   color: #fff;
   z-index: 2;
@@ -372,6 +361,8 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin: 10%;
+  position: relative;
 }
 .title-pops {
   flex-basis: 100%;
@@ -387,23 +378,70 @@
   background-size: cover;
   background-position: center;
   cursor: pointer;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+  transition: 0.3s ease-in-out;
+}
+.box-recipe:hover {
+  z-index: 2;
+  transition: 0.3s ease-in-out;
+}
+.box-recipe:hover::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px);
+  z-index: -1;
+}
+
+.box-recipe:hover h2 {
+  font-size:calc(100vw * 55/1900);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.3s;
+}
+.box-recipe h2 {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  color: #fff;
+  text-align: center;
 }
 
 .box-recipe:nth-child(2) {
   background-image: url("../img/home/classic-burg.jpg");
+
 }
 
 .box-recipe:nth-child(3) {
   background-image: url("../img/home/cakepan.jpg");
+ 
 }
 
 .box-recipe:nth-child(4) {
   background-image: url("../img/home/checken.jpg");
+
 }
 
 .box-recipe:nth-child(5) {
   background-image: url("../img/home/pizza.jpg");
+
 }
+
+
 .container-pops h1 span {
   color: var(--yellow);
   margin-right: calc(100vw * 25 / 1900);
@@ -416,7 +454,7 @@
 
 @media (max-width: 1300px) {
   .hero {
-    height: 70vh;
+    height: 95vh;
   }
   .food-cards {
     justify-content: space-between;
@@ -425,7 +463,7 @@
 
 @media (max-width: 1299px) {
   .hero {
-    height: 60vh;
+    height: 85vh;
   }
   .food-cards {
     justify-content: space-between;
@@ -460,7 +498,7 @@
 
 @media (max-width: 999px) {
   .hero {
-    height: 40vh;
+    height: 80vh;
   }
   .search-container {
     display: flex;
@@ -538,9 +576,7 @@
   .offer-challenge h3 {
     font-size: 35px;
   }
-  .container-pops {
-    flex-wrap: wrap;
-  }
+
 }
 
 @media (max-width: 799px) {
