--- a/css/root.css
+++ b/css/root.css
@@ -23,7 +23,7 @@
 
   body::-webkit-scrollbar {
     width: 5px;
-   height: 2px;
+   height:0;
   }
    
   body::-webkit-scrollbar-track {
@@ -55,6 +55,7 @@
     filter: blur(8px);
     transform: translateX(-100%);
     transition: all 1s;
+    
   }
   
   .hidden-right {
@@ -62,10 +63,13 @@
     filter: blur(8px);
     transform: translateX(100%);
     transition: all 1s;
+  
   }
+ 
   
   .show {
     filter: blur(0);
     transform: translateX(0);
     opacity: 1;
   }
+
