--- a/css/root.css
+++ b/css/root.css
@@ -23,7 +23,7 @@
 
   body::-webkit-scrollbar {
     width: 5px;
-   height:0;
+   height:10px;
   }
    
   body::-webkit-scrollbar-track {
@@ -36,24 +36,11 @@
     border-radius: 12px;
   }
 
-  /* .hidden {
-    opacity: 0;
-    filter: blur(5px);
-    transform: translateX(-100%);
-    transition: all 1s;
-  }
 
-
-  .show {
-    filter: blur(0);
-    transform: translateX(0);
-    opacity: 1;
-  } */
-
-  .hidden-left {
+   /* .hidden-left {
     opacity: 0;
     filter: blur(8px);
-    transform: translateX(-100%);
+    transform: translate3d(-10px, 0, 0);
     transition: all 1s;
     
   }
@@ -61,7 +48,7 @@
   .hidden-right {
     opacity: 0;
     filter: blur(8px);
-    transform: translateX(100%);
+    transform: translate3d(10px, 0, 0);
     transition: all 1s;
   
   }
@@ -69,7 +56,7 @@
   
   .show {
     filter: blur(0);
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
     opacity: 1;
-  }
+  }   */
 
