--- a/css/root.css
+++ b/css/root.css
@@ -22,7 +22,7 @@
 
 
   body::-webkit-scrollbar {
-    width: 5px;
+    width: 8px;
    height:10px;
   }
    
@@ -32,7 +32,7 @@
   }
    
   body::-webkit-scrollbar-thumb {
-    background-color: var(--yellow);
+    background-color: var(--bv);
     border-radius: 12px;
   }
 
