--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,12 @@
   align-items: flex-start;
   flex-direction: column;
   padding: calc(100vw * 25 / 1900);
-  flex-basis: 50%;
+  flex-basis: 80%;
   margin-left: 5%;
 }
 
 .hero-content h1 {
-  font-size: calc(100vw * 140 / 1900);
+  font-size: calc(100vw * 180 / 1900);
   color: #fff;
   font-family: var(--kaushan);
   font-weight: 500;
@@ -95,17 +95,9 @@
   width: calc(100vw * 950 / 1900);
   padding: calc(100vw * 15 / 1900);
   font-size: calc(100vw * 21 / 1900);
+  border-radius: calc(100vw * 21 / 1900);
 }
 
-#search-btn {
-  background-color: var(--yellow);
-  color: black;
-  padding: calc(100vw * 15 / 1900);
-  font-size: calc(100vw * 21 / 1900);
-  cursor: pointer;
-  border: none;
-  font-family: "Poppins", sans-serif;
-}
 .category-buttons {
   display: flex;
   justify-content: center;
@@ -190,13 +182,13 @@
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+.content p:nth-child(4):hover {
+  background-color: var(--bv);
+  color: var(--white);
 }
 
-.test-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 .popular-recipes {
   color: var(--bb);
   font-weight: bold;
@@ -333,98 +325,80 @@
   font-size: calc(100vw * 35 / 1900);
 }
 
-.container-pops {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 10%;
-  position: relative;
-  content-visibility: auto;
-}
-.title-pops {
-  flex-basis: 100%;
-  text-align: center;
-  font-size: calc(100vw * 80 / 1900);
-  margin-bottom: 20px;
-}
-
-.box-recipe {
-  flex: 1 0 33.33%;
-  height: calc(100vw * 400 / 1900);
-  margin: calc(100vw * 10 / 1900);
-  background-size: cover;
-  background-position: center;
-  cursor: pointer;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  position: relative;
-  z-index: 1;
-  content-visibility: auto;
-
-  transition: 0.3s ease-in-out;
-}
-.box-recipe:hover {
-  z-index: 2;
-  transition: 0.3s ease-in-out;
-}
-.box-recipe:hover::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(5px);
-  z-index: -1;
-}
-
-.box-recipe:hover h2 {
-  font-size: calc(100vw * 55 / 1900);
-  color: white;
-  font-family: "Poppins", sans-serif;
-  visibility: visible;
-  opacity: 1;
-  transition-delay: 0.3s;
-}
-.box-recipe h2 {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 2rem;
-  color: #fff;
-  text-align: center;
-}
-
-.box-recipe:nth-child(2) {
-  background-image: url("../img/home/classic-burg.jpg");
-}
-
-.box-recipe:nth-child(3) {
-  background-image: url("../img/home/cakepan.jpg");
-}
-
-.box-recipe:nth-child(4) {
-  background-image: url("../img/home/checken.jpg");
-}
-
-.box-recipe:nth-child(5) {
-  background-image: url("../img/home/pizza.jpg");
-}
-
-.container-pops h1 span {
+.title-pops h1 span {
   color: var(--yellow);
   margin-right: calc(100vw * 25 / 1900);
   font-family: var(--kaushan);
+  text-align: center;
 }
-.container-pops h1 {
+
+.title-pops h1 {
   font-size: calc(100vw * 85 / 1900);
   font-family: var(--kaushan);
+  text-align: center;
+}
+.title-pops h3 {
+  text-align: center;
+  font-size: calc(100vw * 35 / 1900);
+}
+.popular-recipe {
+  margin: 5px 0 5px 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 5%;
+}
+
+.pop-card {
+  position: relative;
+  width: calc(25% - 10px);
+  border-radius: 5px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  content-visibility: auto;
+}
+
+.pop-card img {
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.food-card-overlay {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 80%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.833), rgba(0, 0, 0, 0));
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.pop-card:hover .food-card-overlay {
+  opacity: 1;
+}
+.food-card-title {
+  font-size: calc(100vw * 40 / 1900);
+  font-weight: bold;
+  padding: 10px;
+  font-family: var(--kaushan);
+}
+
+.food-card-details {
+  font-size: calc(100vw * 16 / 1900);
+  margin-bottom: 5%;
+  padding: 10px;
 }
 
 @media (max-width: 1300px) {
@@ -552,6 +526,9 @@
   .offer-challenge h3 {
     font-size: 35px;
   }
+  .popular-recipe {
+    flex-wrap: wrap;
+  }
 }
 
 @media (max-width: 799px) {
@@ -582,6 +559,17 @@
     flex-basis: 100%;
     padding: 5%;
   }
+  .hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    z-index: 1;
+    border-radius: 5px;
+  }
   .hero-content {
     justify-content: center;
     align-items: center;
@@ -611,6 +599,27 @@
     flex-direction: column;
     height: 100%;
   }
+  .popular-recipe {
+    flex-direction: column;
+  }
+  .pop-card {
+    margin: 10px 0 10px 0;
+    width: 100%;
+    height: 100%;
+  }
+  .title-pops h1 {
+    font-size: 60px;
+  }
+  .title-pops h3 {
+    font-size: 21px;
+  }
+  .food-card-title {
+    font-size: 40px;
+  }
+
+  .food-card-details {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 599px) {
@@ -619,7 +628,7 @@
   }
   .hero-content p {
     padding: 8px;
-}
+  }
   .title-header h1 {
     font-size: 40px;
   }
@@ -639,7 +648,23 @@
   }
   .about-main img {
     width: 270px;
-}
+  }
+  .pop-card {
+    width: 100%;
+    height: 100%;
+  }
+  .title-pops h1 {
+    font-size: 45px;
+  }
+  .title-pops h3 {
+    font-size: 18px;
+  }
+  .food-card-title {
+    font-size: 30px;
+  }
+  .food-card-details {
+    font-size: 16px;
+  }
 }
 
 /* MAV*************************************************************************************************/
@@ -914,8 +939,8 @@ nav .wrapper {
     max-width: 350px;
     top: 0;
     left: -100%;
-    background-color: rgba(255, 255, 255, 0.5); 
-    backdrop-filter: blur(10px); 
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
     display: block;
     padding: 50px 10px;
     line-height: 50px;
@@ -975,13 +1000,12 @@ nav .wrapper {
     display: none;
   }
   #scroll-label {
-    color: white; 
+    color: white;
     transition: all 1s;
   }
-  
+
   #scroll-label.scroll-black {
-    color: black; 
-   
+    color: black;
   }
   .nav-links .mobile-item {
     display: block;
@@ -1068,7 +1092,7 @@ nav input {
   transition: all 1s;
 }
 
-.bgColor li a{
+.bgColor li a {
   color: black;
 }
 
@@ -1205,7 +1229,7 @@ footer .info .con {
 /******************UPDATE*********************/
 .update-section {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
-    url("../img/Xassets/about-us-hero.jpg");
+    url("../img/Xassets/about-us-hero-bg.jpg");
   background-color: var(--yellow);
   background-size: cover;
   background-position: center center;
@@ -1303,6 +1327,7 @@ footer .info .con {
 .testimonial {
   position: relative;
   max-width: 1200px;
+  height: 100vh;
   width: 100%;
   padding: 30px 0;
   row-gap: 30px;
@@ -1315,8 +1340,7 @@ footer .info .con {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 80vh;
-  /* background-color: var(--yellow); */
+  height: 100vh;
 }
 
 .testimonial img {
