--- a/css/RecipeF.css
+++ b/css/RecipeF.css
@@ -18,6 +18,9 @@
   display: flex;
   gap: 6rem;
 }
+#p1{
+  text-align: justify;
+}
 
 .recipe-info h2{
   margin-top: -5%;
@@ -82,7 +85,6 @@
   display: grid;
   gap: 2rem 5rem;
   grid-template-columns: 2fr 1fr;
-<<<<<<< Updated upstream
 }
 .recipe-content h4{
   font-size: 2rem;
@@ -92,31 +94,12 @@
 }
 .single-instruction{
   padding-bottom: 3%;
-=======
-  content-visibility: auto;
-}
-.recipe-content h4{
-  font-size: 2rem;
-  content-visibility: auto;
-}
-.first-column h4{
-  padding-bottom: 2rem;
-  content-visibility: auto;
-}
-.single-instruction{
-  padding-bottom: 3%;
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 .single-instruction header {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 1.5rem;
   align-items: center;
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 .single-instruction header p {
   text-transform: uppercase;
@@ -124,36 +107,20 @@
   font-weight: 600;
   color: var(--yellow);
   margin-bottom: 0;
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 .single-instruction > p {
   color: var(--nero);
   font-size: 1.2rem;
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 
 .single-instruction header div {
   height: 2px;
   background: var(--bv);
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 
 .second-column {
   display: grid;
   row-gap: 2rem;
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 
 .single-ingredient {
@@ -162,10 +129,6 @@
   padding-top: 10%;
   color: var(--nero);
   font-size: 1.2rem;
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 #r1, h1{
   display: flex;
@@ -177,10 +140,6 @@
   color: var(--bb);
   font-size: calc(100vh * 35/500);
   margin: calc(100vh * 25/500);
-<<<<<<< Updated upstream
-=======
-  content-visibility: auto;
->>>>>>> Stashed changes
 }
 #r1{
   color: var(--yellow);
