--- a/css/style.css
+++ b/css/style.css
@@ -152,12 +152,6 @@
 .food-card .content {
   padding: 15px;
 }
-.food-card .content{
-  display: flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
-}
 
 .food-card h3 {
   margin-top: 0;
@@ -169,7 +163,6 @@
 .food-card p {
   margin: 0;
   font-family: "Poppins", sans-serif;
-
 }
 .content p:nth-child(3) {
   margin: 5%;
@@ -179,8 +172,8 @@
   font-weight: 500;
   font-size: calc(100vw * 16 / 1900);
 }
-.food-card  .content a{
-  margin-top: 5%;
+.content p:nth-child(4) {
+  margin: 5%;
   color: black;
   padding: calc(100vw * 25 / 1900);
   background-color: var(--yellow);
@@ -190,9 +183,8 @@
   font-weight: 500;
   cursor: pointer;
   transition: 0.3s ease-in-out;
-  text-decoration: none;
 }
-.food-card  .content a:nth-child(4):hover {
+.content p:nth-child(4):hover {
   background-color: var(--bv);
   color: var(--white);
 }
@@ -934,9 +926,9 @@ nav .wrapper {
     margin-right: auto;
   }
   .row .mega-links li a {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 200;
-    margin: 2%;
+    margin: 5%;
     padding: 10px;
   }
 
@@ -1093,6 +1085,16 @@ nav input {
   font-weight: bold;
 }
 
+/* Scroll effect*/
+
+.bgColor {
+  background-color: white;
+  transition: all 1s;
+}
+
+.bgColor li a {
+  color: black;
+}
 
 /******************** FOOTER ************************/
 footer {
@@ -1325,7 +1327,7 @@ footer .info .con {
 .testimonial {
   position: relative;
   max-width: 1200px;
-  height: 75vh;
+  height: 100vh;
   width: 100%;
   padding: 30px 0;
   row-gap: 30px;
