--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,12 @@
   justify-content: center;
   height: 100vh;
   position: relative;
+  background: url("../img/home/hero-bg-3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.hero::after {
+/* .hero::after {
   content: "";
   position: absolute;
   top: 0;
@@ -20,27 +24,16 @@
   width: 100%;
   background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(0, 0, 0, 0));
   z-index: 1;
-}
-
-.carousel img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+} */
 
 .hero-content {
   color: #fff;
   z-index: 2;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  padding: calc(100vw * 25 / 1900);
-  flex-basis: 80%;
-  margin-left: 5%;
+  margin: 5%;
 }
 
 .hero-content h1 {
@@ -55,17 +48,7 @@
   color: #fff;
   margin-bottom: calc(100vw * 26 / 1900);
   font-family: "Poppins", sans-serif;
-  font-weight: 200;
-}
-.hero-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-basis: 50%;
-  z-index: 12;
-}
-.hero-image img {
-  width: calc(100vw * 700 / 1900);
+  font-weight: 500;
 }
 
 .hero-content .btn {
@@ -152,6 +135,12 @@
 .food-card .content {
   padding: 15px;
 }
+.food-card .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 .food-card h3 {
   margin-top: 0;
@@ -172,8 +161,8 @@
   font-weight: 500;
   font-size: calc(100vw * 16 / 1900);
 }
-.content p:nth-child(4) {
-  margin: 5%;
+.food-card .content a {
+  margin-top: 5%;
   color: black;
   padding: calc(100vw * 25 / 1900);
   background-color: var(--yellow);
@@ -183,8 +172,9 @@
   font-weight: 500;
   cursor: pointer;
   transition: 0.3s ease-in-out;
+  text-decoration: none;
 }
-.content p:nth-child(4):hover {
+.food-card .content a:nth-child(4):hover {
   background-color: var(--bv);
   color: var(--white);
 }
@@ -362,8 +352,8 @@
 
 .pop-card img {
   display: flex;
-  justify-content:center;
-  align-items:center;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -748,6 +738,7 @@ nav .wrapper {
   font-size: calc(100vw * 18 / 1900);
   padding: 20px 25px;
   border-radius: 5px;
+  font-weight: 500;
   transition: all 0.3s ease;
 }
 .nav-links a {
@@ -926,9 +917,9 @@ nav .wrapper {
     margin-right: auto;
   }
   .row .mega-links li a {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 200;
-    margin: 5%;
+    margin: 2%;
     padding: 10px;
   }
 
@@ -1083,17 +1074,6 @@ nav input {
 .body-text div {
   font-size: 21px;
   font-weight: bold;
-}
-
-/* Scroll effect*/
-
-.bgColor {
-  background-color: white;
-  transition: all 1s;
-}
-
-.bgColor li a {
-  color: black;
 }
 
 /******************** FOOTER ************************/
@@ -1327,7 +1307,7 @@ footer .info .con {
 .testimonial {
   position: relative;
   max-width: 1200px;
-  height: 100vh;
+  height: 75vh;
   width: 100%;
   padding: 30px 0;
   row-gap: 30px;
@@ -1393,5 +1373,211 @@ footer .info .con {
   }
   .test-container {
     height: 50vh;
+  }
+}
+
+/**********RECIPES********************/
+.page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 97.88vh;
+  margin: 5px;
+  border-radius: 15px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 5%;
+  position: relative;
+  z-index: 999;
+  background: url("../img/recipe/bg1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+}
+
+.page::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to left, #6c79e0, rgba(0, 0, 0, 0));
+  z-index: -1;
+  border-radius: 15px;
+}
+
+.recipe-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5%;
+}
+.recipe-img img{
+  width: calc(100vw * 900/1900);
+  margin-right: 3%;
+}
+.recipe-info {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.recipe-info h1 {
+  margin-bottom: 5%;
+  font-size: calc(100vw * 120 / 1900);
+  color: white;
+}
+.recipe-img {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.recipe-info p {
+  color: white;
+  font-weight: 500;
+}
+#p1 {
+  font-size: 1.2rem;
+}
+.recipe-icons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  margin: 2rem 0;
+  text-align: center;
+  text-transform: capitalize;
+}
+.recipe-icons i {
+  font-size: 2rem;
+  color: white;
+}
+.recipe-icons h5,
+.recipe-icons p {
+  margin-bottom: 0;
+  font-size: 0.85em;
+  color: var(--yellow);
+}
+
+.recipe-icons p {
+  color: white;
+}
+.recipe-tags {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 0.7em;
+  font-weight: 600;
+}
+.recipe-tags a {
+  background: var(--yellow);
+  border-radius: 0.25rem;
+  color: var(--bb);
+  padding: 0.05rem 0.5rem;
+  margin: 0 0.25rem;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+.recipe-content {
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
+  display: grid;
+  gap: 2rem 5rem;
+  grid-template-columns: 2fr 1fr;
+}
+.recipe-content h4 {
+  font-size: 2rem;
+}
+.first-column h4 {
+  padding-bottom: 2rem;
+}
+.single-instruction {
+  padding-bottom: 3%;
+}
+
+.single-instruction header {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1.5rem;
+  align-items: center;
+}
+.single-instruction header p {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--yellow);
+  margin-bottom: 0;
+}
+.single-instruction > p {
+  color: var(--nero);
+  font-size: 1.2rem;
+}
+
+.single-instruction header div {
+  height: 2px;
+  background: var(--bv);
+}
+
+.second-column {
+  display: grid;
+  row-gap: 2rem;
+}
+
+.single-ingredient {
+  border-bottom: 2px solid var(--bv);
+  padding-bottom: 10%;
+  padding-top: 10%;
+  color: var(--nero);
+  font-size: 1.2rem;
+}
+
+@media (max-width: 1299px){
+  .recipe-page {
+    flex-direction: column;
+    align-items: center;
+  }
+  .page::after {
+    background-image: linear-gradient(to top, #6c79e0, rgba(0, 0, 0, 0));
+   
+  }
+  .recipe-info {
+    justify-content: center;
+    align-items: center;
+  }
+  
+}
+@media (min-width: 999px){
+  .page{
+    height: auto;
+  }
+}
+@media (max-width: 799px) {
+  .recipe-info {
+    padding: 0 5%;
+  }
+  .page{
+    height: auto;
+  }
+
+  .recipe-img {
+    padding: 0;
+  }
+
+  .recipe-img img {
+    width: 100%;
+  }
+
+  .recipe-content {
+    padding-left: 5%;
+    padding-right: 5%;
+    grid-template-columns: 1fr;
+    gap: 2rem;
   }
 }
