--- a/css/all.css
+++ b/css/all.css
@@ -5,16 +5,13 @@
 }
 .all-header{
     height: 50vh;
-    background-image: url('../img/home/slider-2.jpg');
+    background: url("../img/home/hero-bg-3.jpg");
     position: relative;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
     
 }
-.overlay-all {
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
