--- a/css/style.css
+++ b/css/style.css
@@ -4,46 +4,115 @@
   box-sizing: border-box;
   font-family: var(--poppins);
 }
-.hero {
+/********HERO*************/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+.hero-section {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
+}
+.hero-1 {
   position: relative;
-  background: url("../img/home/hero-bg-3.jpg");
+  flex-basis: 50%;
+  background: url("../img/home/hero-bg-4.jpg");
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
+  padding: 2%;
+  z-index: 1;
+}
+.hero-1::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+  z-index: -1;
+  
+}
+.hero-1 h1 {
+  color: #fff;
+  font-family: var(--kaushan);
+  font-size: calc(100vw * 120 / 1900);
+  margin-bottom: 2%;
 }
 
-.hero-content {
-  color: #fff;
+.hero-2 {
+  flex-basis: 30%;
+  height: 100vh;
+  font-family: var(--poppins);
   z-index: 2;
+}
+.sub-hero-1 {
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--nero);
+  z-index: 3;
+}
+
+.sub-hero-2 {
+  height: 50vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
   flex-direction: column;
-  margin: 5%;
-  padding: 10%;
+  background: url('../img/Xassets/about-us-hero-bg.jpg');
+  object-fit: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+  padding: 15px;
+  position: relative;
+}
+
+.hero-1 p {
+  font-family: var(--poppins);
+  font-size: calc(100vw * 21 / 1900);
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.sub-hero-profiles img {
+  border-radius: 50%;
+}
+.hero-2 h1 {
+  font-size: calc(100vw * 75 / 1900);
+  color: var(--white);
+  line-height: 1.5;
   text-align: center;
 }
-
-.hero-content h1 {
-  font-size: calc(100vw * 180 / 1900);
-  color: #fff;
-  font-family: var(--kaushan);
-  font-weight: 500;
+.sub-hero-1 span {
+  color: var(--yellow);
+  margin-left: -10px;
 }
-
-.hero-content p {
-  font-size: calc(100vw * 21 / 1900);
-  color: #fff;
-  margin-bottom: calc(100vw * 26 / 1900);
+.sub-hero-2 p{
+  color: white;
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+  font-size:calc(100vw * 12/1900);
+  font-weight: 200;
+  display: none;
+  margin: 5px;
 }
 
-.hero-content .btn {
+.butn {
   display: inline-block;
   padding: 15px 35px;
   background-color: var(--yellow);
@@ -52,7 +121,233 @@
   text-decoration: none;
   font-family: "Poppins", sans-serif;
   border-radius: calc(100vw * 5 / 1900);
-  font-weight: bold;
+  width: 200px;
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+.hero-3 {
+  position: relative;
+  flex-basis: 30%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  overflow: hidden;
+}
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.sub-hero-2 .butn{
+  display: none;
+}
+.sub-hero-2 i{
+  color: white;
+  font-size:85px;
+  display: none;
+}
+@media (max-width: 1299px){
+  
+  .hero-section {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+
+    height: 1000px;
+    margin: 5px;
+  }
+  
+  .hero-1 {
+    flex-basis: 50%;
+    position: relative;
+    background: url("../img/home/hero-bg-4.jpg");
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2%;
+    z-index: -1;
+    border-radius: 5px;
+    width: 100%;
+    
+  }
+  .hero-1::after{
+    border-radius: 5px;
+  }
+  
+  .hero-1 h1 {
+    font-size: 85px;
+    text-align: center;
+    z-index: 99;
+  }
+  
+  .hero-2 {
+    flex-basis: 80%;
+    display: flex;
+    margin: 5px 0 0 0;
+    border-radius: 5px;
+    height:30vh;
+  }
+  
+  .sub-hero-1 {
+    flex-basis: 50%;
+    width: auto;
+    border-radius: 5px ;
+    margin-right: 5px;
+    height: 300px;
+  }
+  
+  .sub-hero-2 {
+    flex-basis: 50%;
+    width: auto;
+    border-radius: 5px ;
+    height: 300px;
+  }
+  
+  .hero-1 p {
+    font-size: 14px;
+    text-align: center;
+    display: none;
+  }
+  
+  .sub-hero-profiles img {
+    border-radius: 50%;
+  }
+  
+  .hero-2 h1 {
+    font-size: 55px;
+    padding: 10px;
+    color: var(--white);
+  }
+  
+  .sub-hero-1 span {
+    color: var(--yellow);
+    margin-left: 5px;
+  }
+
+  .butn {
+    font-size: 12px;
+    text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    border-radius: 5px;
+    width: 200px;
+    text-align: center;
+    margin-bottom: 5%;
+  }
+  
+  .hero-3 {
+    flex-basis: 100%;
+    border-radius: 5px;
+  }
+  .sub-hero-2::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    z-index: -1;
+    border-radius: 5px;
+  }
+  .sub-hero-2 p{
+    display: block;
+    font-size: 15px;
+    font-weight: 400;
+  }
+  .sub-hero-2 i{
+    display: block;
+    font-size: 40px;
+  
+  }
+  
+
+}
+@media (max-width: 799px){
+  .hero-1 {
+    background: url("../img/home/hero-bg-3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .sub-hero-2 p{
+    font-size: 14px;
+  }
+  .hero-2 h1 {
+    font-size: 40px;
+    padding: 5px;
+    margin-right: 15px;
+  }
+  .hero-2 span {
+    margin-left: 5px;
+  }
+  .hero-1 p{
+    display: none;
+  }
+}
+@media (max-width: 599px){
+  .hero-1 h1 {
+    font-size: 60px;
+  }
+  .hero-2{
+    flex-direction: column;
+    height: auto;
+    flex-basis: 100%;
+  }
+  .sub-hero-1{
+    padding: 15px;
+    order: 2;
+    height: auto;
+    width: 100%;
+  }
+  .butn{
+    display: none;
+  }
+  .sub-hero-2:not(i){
+    order: 1;
+    margin: 0 0 5px 0;
+    height: auto;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+  .sub-hero-1 h1{
+    font-size:35px;
+    margin: 0;
+  }
+  .sub-hero-2 p{
+   font-size:16px;
+  }
+  .sub-hero-2 .butn{
+    margin-top:5px;
+    display: block;
+  }
+
+}
+@media (max-width: 599px){
+  .hero-1 h1 {
+    font-size: 45px;
+  }
+  .sub-hero-2 .butn{
+    margin-top:15px;
+  }
+  .sub-hero-2 i {
+    align-self: flex-start;
+  }
+  .hero-3{
+    margin-top:5px;
+  }
 }
 
 .search-container {
@@ -386,18 +681,14 @@
 
 
 @media (max-width: 1300px) {
-  .hero {
-    height: 95vh;
-  }
+
   .food-cards {
     justify-content: space-between;
   }
 }
 
 @media (max-width: 1299px) {
-  .hero {
-    height: 85vh;
-  }
+ 
   .food-cards {
     justify-content: space-between;
   }
@@ -431,9 +722,7 @@
 }
 
 @media (max-width: 999px) {
-  .hero {
-    height: 80vh;
-  }
+
   .search-container {
     display: flex;
     justify-content: center;
@@ -538,51 +827,11 @@
     font-size: 12px;
     border-radius: 5px;
   }
-  .hero-image {
-    order: 1;
-    flex-basis: 100%;
-    padding: 5%;
-  }
-  .hero::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
-    z-index: 1;
-    border-radius: 5px;
-  }
-  .hero-content {
-    justify-content: center;
-    align-items: center;
-    order: 2;
-    flex-basis: 100%;
-    margin-bottom: 5%;
-    margin-left: 0;
-  }
-  .hero-content h1 {
-    font-size: 55px;
-    text-align: center;
-  }
 
-  .hero-content p {
-    font-size: 12px;
-    text-align: center;
-  }
-  .hero-content .btn {
-    padding: 10px 25px;
-    font-size: 12px;
-    text-align: center;
-  }
   .content p:nth-child(3) {
     font-size: 12px;
   }
-  .hero {
-    flex-direction: column;
-    height: 100%;
-  }
+
   .popular-recipe {
     flex-direction: column;
   }
