--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,13 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: 0;
+  box-sizing: border-box; 
 }
- .bd{
+
+.bd {
   display: flex;
-  justify-content:center;
-  align-items:center;
+  justify-content: center;
+  align-items: center;
   background: url("../img/login/bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -15,8 +16,9 @@
   position: relative;
   z-index: 999;
 }
-.bd::after{
-  content:"";
+
+.bd::after {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -26,54 +28,42 @@
   background-color: rgba(0, 0, 0, 0.266);
   z-index: -1;
 }
+
 .login-container {
   display: flex;
-  margin: 5% 10% 5% 10%;
+  justify-content: center;
+  align-items: center;
   box-shadow: var(--box-shads);
-
 }
 
-.form-img {
-  flex-basis: 50%;
-  position: relative;
-  overflow: hidden;
-}
-
-.form-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
 .login-form {
-  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: white;
+  padding: 5rem;
+  width: calc(100vw * 800/1900);
+  border-radius:15px;
+ 
 }
 
-.login-form form {
-  width: 80%;
-}
 
 .login-form h1 {
   text-align: center;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   font-size: calc(100vw * 55 / 1900);
 }
 
 .login-form div {
-  display: flex;
-  flex-direction: column;
   margin-bottom: 20px;
 }
 
 .login-form label {
   align-self: flex-start;
   font-weight: 300;
-  font-size: calc(100vw * 18/1900);
+  font-size: calc(100vw * 18 / 1900);
 }
 
 .login-form input {
@@ -95,69 +85,73 @@
   cursor: pointer;
 }
 
-.login-form p{
-    text-align: center;
-    font-weight: 300;
-}
-.login-form p span{
-    color:var(--bv);
-    font-weight: 500;
-    cursor: pointer;
-} 
-.login-form p span a{
-    text-decoration: none;
-    color: inherit;
-}
-
-/*********************REGISTER*****************************/
-.register-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.register-form {
-  background-color: white;
-  padding: calc(100vw * 80/1900);
-  box-shadow: var(--box-shads);
-  width: calc(100vw * 900/1900);
-}
-.register-form form{
-  width: 100%;
-}
-
-.register-form h1 {
+.login-form p {
   text-align: center;
-  margin-bottom: 20px;
-}
-
-.register-form div {
-  margin-bottom: 10px;
-}
-
-.register-form label {
-  display: block;
   font-weight: 300;
 }
 
-.register-form input {
-  width: 100%;
-  padding: 8px;
-  border: none;
-  border-bottom: 2px solid #ccc;
-}
-
-.register-form button {
-  background-color: var(--yellow);
-  color: black;
-  padding: 20px;
-  width: 100%;
-  border: none;
-  font-weight: bold;
+.login-form p span {
+  color: var(--bv);
+  font-weight: 500;
   cursor: pointer;
 }
 
-.register-form button:hover {
-  background-color: var(--yellow);
+.login-form p span a {
+  text-decoration: none;
+  color: inherit;
 }
+
+.login-form form {
+  width: 100%;
+  height: calc(100vw * 500/1900);
+}
+
+@media (max-width: 999px) {
+  .login-form {
+    width: 500px;
+    height: 500px;
+   padding: 45px;
+  }
+  .login-form button {
+    font-size: 16px;
+    padding: 15px;
+  }
+  .login-form p {
+    font-size: 12px;
+  }
+  .login-form h1 {
+    font-size: 35px;
+    margin: 0;
+  }
+  .login-form form {
+    height:auto;
+  }
+  
+}
+@media (max-width: 799px) {
+  .login-form {
+    border-radius: 0;
+    width: calc(100vw * 799/799);
+    height: 100vh;
+  }
+  .login-form button {
+    font-size: 16px;
+    padding: 15px;
+  }
+  .login-form p {
+    font-size: 12px;
+  }
+  .login-form h1 {
+    font-size: 35px;
+    margin: 0;
+  }
+  .login-form form {
+    height:auto;
+  }
+  .login-form label {
+    font-size: 14px;
+  }
+  
+  
+}
+
